--- a/glossary-1.html
+++ b/glossary-1.html
@@ -197,10 +197,24 @@ div.csl-indent {
 <li class="chapter" data-level="" data-path="glossary.html"><a href="glossary.html"><i class="fa fa-check"></i>Glossary</a></li>
 <li class="chapter" data-level="" data-path="flashcards.html"><a href="flashcards.html"><i class="fa fa-check"></i>Flashcards</a></li>
 <li class="part"><span><b>Week 2</b></span></li>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html"><i class="fa fa-check"></i>Principles of Statistical Inference</a>
+<ul>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#probability-distributions"><i class="fa fa-check"></i>Probability Distributions</a>
+<ul>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#sampling-distributions"><i class="fa fa-check"></i>Sampling Distributions</a></li>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#the-t-distribution"><i class="fa fa-check"></i>The t-Distribution</a></li>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#confidence-intervals"><i class="fa fa-check"></i>Confidence Intervals</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#tests-of-statistical-significance"><i class="fa fa-check"></i>Tests of Statistical Significance</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html"><i class="fa fa-check"></i>Linear Regression - Theory</a>
 <ul>
 <li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#introduction"><i class="fa fa-check"></i>Introduction</a></li>
-<li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#what-is-it"><i class="fa fa-check"></i>What is it?</a></li>
+<li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#what-is-it"><i class="fa fa-check"></i>What is it?</a>
+<ul>
+<li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#population"><i class="fa fa-check"></i>Population</a></li>
+<li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#sample"><i class="fa fa-check"></i>Sample</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#ordinary-least-squares-ols"><i class="fa fa-check"></i>Ordinary Least Squares (OLS)</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html"><i class="fa fa-check"></i>Linear Regression – Application</a>
@@ -221,6 +235,7 @@ div.csl-indent {
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#parsimony"><i class="fa fa-check"></i>Parsimony</a></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#r-squared-again"><i class="fa fa-check"></i>R-Squared Again</a></li>
 </ul></li>
+<li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#limitations"><i class="fa fa-check"></i>Limitations</a></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#literature-recommendations"><i class="fa fa-check"></i>Literature Recommendations</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="important-disclaimer.html"><a href="important-disclaimer.html"><i class="fa fa-check"></i>Important Disclaimer</a></li>
@@ -371,10 +386,292 @@ Description
 <tbody>
 <tr>
 <td style="text-align:left;min-width: 1.25in; ">
-Test
 </td>
 <td style="text-align:left;">
-Test
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+<strong>Methodological</strong>
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+adjusted rsquared
+</td>
+<td style="text-align:left;">
+The coefficient of determination for multiple regression.
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+autocorrelation
+</td>
+<td style="text-align:left;">
+The value of one error term does not allow us to predict the value of another error term. As such their covariances must be zero
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+causal
+</td>
+<td style="text-align:left;">
+In order to establish a causal relationship, the following criteria must be met concurrently: &lt;br&gt; &lt;ol&gt;&lt;li&gt;Relevance of the variables within the broader theoretical and empirical context of the research&lt;ol type=“A”&gt;&lt;li&gt;Clear Theoretical Framework&lt;/li&gt;&lt;li&gt;Clear conceptualization&lt;/li&gt;&lt;li&gt;Exclusion of alternative explanations&lt;/li&gt;&lt;/ol&gt;&lt;/li&gt;&lt;li&gt;Asymmetry&lt;/li&gt;&lt;li&gt;Significant (and sufficiently strong) statistical association&lt;/li&gt;&lt;/ol&gt;
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+ceteris paribus
+</td>
+<td style="text-align:left;">
+All other things being equal
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+coefficient
+</td>
+<td style="text-align:left;">
+A coefficient is a numerical expression which is multiplied with the value of a variable
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+coefficient of determination
+</td>
+<td style="text-align:left;">
+Indicates the proportion of the variation in the dependent variable which is explained through the independent variable. It is defined as <span class="math inline">\(\frac{\text{Explained Sum of Squares}}{\text{Total Sum of Squares}}\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+conditional expectation function
+</td>
+<td style="text-align:left;">
+see Population Regression Function (PRF)
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+confidence interval
+</td>
+<td style="text-align:left;">
+A confidence interval constructs an interval of numbers which will contain the true parameter of the population (e.g. the mean) in <span class="math inline">\((1-\alpha)\)</span> times of cases. <span class="math inline">\(\alpha\)</span> is usually chosen to be small, so that our confidence interval has a probability of 95% or 99%
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+confidence level
+</td>
+<td style="text-align:left;">
+The confidence level is the probability with which the confidence interval is believed to contain the true parameter of the population and is defined as <span class="math inline">\((1-\alpha)\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+degrees of freedom
+</td>
+<td style="text-align:left;">
+Degrees of freedom express constraints on our estimation process by specifying how many values in the calculation are free to vary
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+error term
+</td>
+<td style="text-align:left;">
+The error term quantifies the distance between each observation and the corresponding point on the regression line. The terms are denoted as <span class="math inline">\(\epsilon_{i}\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+intercept
+</td>
+<td style="text-align:left;">
+The intercept is the point at which the regression line intersects the y-axis. In this book we denote it as <span class="math inline">\(\beta_{0}\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+normal distribution
+</td>
+<td style="text-align:left;">
+The normal distribution is a bell-shaped probability distribution that is symmetrical around the mean. Approximately 68% of values fall within 1 standard deviation of the mean, 96% within 2 standard deviations, and 99.7% within 3 standard deviations. This is known as the empirical rule.
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+Ordinary Least Squares
+</td>
+<td style="text-align:left;">
+The method of fitting a regression line by means of minimizing the sum of the squared distances between the observations and the estimated values
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+p-value
+</td>
+<td style="text-align:left;">
+The p-value indicates the probability of obtaining a result equal to, or even more extreme than the observed value, assuming the null hypothesis is true. Common thresholds for significance are 0.05, 0.01, and 0.001. A smaller p-value suggests stronger evidence against the null hypothesis. The p-value is denoted as <span class="math inline">\(p\)</span>.
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+parameter
+</td>
+<td style="text-align:left;">
+A parameter is the value a statistic would assume in the long run. It is also called the Expected Value
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+partial slope coefficient
+</td>
+<td style="text-align:left;">
+A partial slope coefficient measures the influence of a variable in multiple regression, holding all other independent variables in the model constant
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+population
+</td>
+<td style="text-align:left;">
+Collection of all cases which possess certain pre-defined characteristics
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+Population Regression Function
+</td>
+<td style="text-align:left;">
+The Population Regression Function (PRF) describes the expected distribution of <span class="math inline">\(y\)</span>, given the values of the independent variable(s) <span class="math inline">\(x\)</span>. It is also called the conditional expectation function (CEF) and can be denoted as <span class="math inline">\(E(y_{i}|x_{i})\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+probability distribution
+</td>
+<td style="text-align:left;">
+Specifies the likelihood of all possible outcomes for a particular variable
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+regression
+</td>
+<td style="text-align:left;">
+Regression analysis determines the direction and magnitude of influence of one or more independent variables on a dependent variable
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+regression line
+</td>
+<td style="text-align:left;">
+The regression line describes how the dependent variable is functionally related to the values of the independent variable. It it defined by the intercept <span class="math inline">\(\beta_{0}\)</span> and the slope <span class="math inline">\(\beta_{1}\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+residual
+</td>
+<td style="text-align:left;">
+An estimation of the error term. The difference between an observation <span class="math inline">\(y_{i}\)</span> and the estimated value <span class="math inline">\(\hat{y}_{i}\)</span>. Denoted as <span class="math inline">\(\hat{\epsilon}_{i}\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+sample
+</td>
+<td style="text-align:left;">
+A sub-group of the population
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+Sample Regression Function
+</td>
+<td style="text-align:left;">
+A regression line based on a randomly drawn sample
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+significance test
+</td>
+<td style="text-align:left;">
+A significance test is a statistical method used to determine whether observed data provide enough evidence to reject a null hypothesis. It calculates a probability of observing data as extreme as, or more extreme than, the actual sample results, assuming the null hypothesis is true
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+slope
+</td>
+<td style="text-align:left;">
+A slope is defined as rise over run, and so it tells us how many units of y we need to climb (or descend if the slope is negative) for every additional unit of the independent variable <span class="math inline">\(x\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+standard error
+</td>
+<td style="text-align:left;">
+The standard deviation of the sampling distribution. It is defined as:<span class="math display">\[\begin{equation*}\sigma_{\bar{y}} = \frac{\sigma}{\sqrt{n}}\end{equation*}\]</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+t-distribution
+</td>
+<td style="text-align:left;">
+The t-Distribution is bell-shaped and symmetrical around a mean of zero. Its shape is dependent on the degrees of freedom in the estimation process.
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+test statistic
+</td>
+<td style="text-align:left;">
+A test statistic is a value calculated from the sample data that is used to decide whether to reject the null hypothesis (H<span class="math inline">\(_0\)</span>) in a hypothesis test. It quantifies the degree to which the observed data diverges from what is expected under the null hypothesis. In a t-test, the test statistic is a t-value, which measures the distance between the sample mean and the (hypothesised) population mean, expressed in units of standard errors.
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+time-series data
+</td>
+<td style="text-align:left;">
+Time-series data review a certain characteristic over time <span class="math inline">\(t\)</span>, where <span class="math inline">\(t\)</span> runs from 1 to <span class="math inline">\(T\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+z-score
+</td>
+<td style="text-align:left;">
+The z-score, sometimes also referred to as z-value, expresses in units of standard deviation how far an observation of interest falls away from the mean.
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+<strong>Substantive</strong>
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+test
+</td>
+<td style="text-align:left;">
+test
 </td>
 </tr>
 </tbody>
