--- a/glossary-2.html
+++ b/glossary-2.html
@@ -197,10 +197,24 @@ div.csl-indent {
 <li class="chapter" data-level="" data-path="glossary.html"><a href="glossary.html"><i class="fa fa-check"></i>Glossary</a></li>
 <li class="chapter" data-level="" data-path="flashcards.html"><a href="flashcards.html"><i class="fa fa-check"></i>Flashcards</a></li>
 <li class="part"><span><b>Week 2</b></span></li>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html"><i class="fa fa-check"></i>Principles of Statistical Inference</a>
+<ul>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#probability-distributions"><i class="fa fa-check"></i>Probability Distributions</a>
+<ul>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#sampling-distributions"><i class="fa fa-check"></i>Sampling Distributions</a></li>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#the-t-distribution"><i class="fa fa-check"></i>The t-Distribution</a></li>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#confidence-intervals"><i class="fa fa-check"></i>Confidence Intervals</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="principles-of-statistical-inference.html"><a href="principles-of-statistical-inference.html#tests-of-statistical-significance"><i class="fa fa-check"></i>Tests of Statistical Significance</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html"><i class="fa fa-check"></i>Linear Regression - Theory</a>
 <ul>
 <li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#introduction"><i class="fa fa-check"></i>Introduction</a></li>
-<li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#what-is-it"><i class="fa fa-check"></i>What is it?</a></li>
+<li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#what-is-it"><i class="fa fa-check"></i>What is it?</a>
+<ul>
+<li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#population"><i class="fa fa-check"></i>Population</a></li>
+<li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#sample"><i class="fa fa-check"></i>Sample</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="linear-regression---theory.html"><a href="linear-regression---theory.html#ordinary-least-squares-ols"><i class="fa fa-check"></i>Ordinary Least Squares (OLS)</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html"><i class="fa fa-check"></i>Linear Regression – Application</a>
@@ -221,6 +235,7 @@ div.csl-indent {
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#parsimony"><i class="fa fa-check"></i>Parsimony</a></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#r-squared-again"><i class="fa fa-check"></i>R-Squared Again</a></li>
 </ul></li>
+<li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#limitations"><i class="fa fa-check"></i>Limitations</a></li>
 <li class="chapter" data-level="" data-path="linear-regression-application.html"><a href="linear-regression-application.html#literature-recommendations"><i class="fa fa-check"></i>Literature Recommendations</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="important-disclaimer.html"><a href="important-disclaimer.html"><i class="fa fa-check"></i>Important Disclaimer</a></li>
@@ -371,10 +386,108 @@ Description
 <tbody>
 <tr>
 <td style="text-align:left;min-width: 1.25in; ">
-Test
 </td>
 <td style="text-align:left;">
-Test
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+<strong>Methodological</strong>
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+dichotomous
+</td>
+<td style="text-align:left;">
+Can only assume two mutually exclusive, but internally homogeneous qualitative categories
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+generalized linear model
+</td>
+<td style="text-align:left;">
+a family of models which allows us to estimate a linear relationship between dependent and independent variables even though the underlying relationship is not linear by means of a link function. It also allows us to vary the assumed distribution of our error terms
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+latent variable
+</td>
+<td style="text-align:left;">
+Variables that can only be inferred indirectly through a mathematical model from other observable variables that can be directly observed or measured
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+likelihood
+</td>
+<td style="text-align:left;">
+Likelihood is a measure of the extent to which a sample provides support for particular values of a parameter in a parametric model
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+link function
+</td>
+<td style="text-align:left;">
+Converts the linear part of a generalized linear model into a probability
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+normal distribution
+</td>
+<td style="text-align:left;">
+The normal distribution is a bell-shaped probability distribution that is symmetrical around the mean. Approximately 68% of values fall within 1 standard deviation of the mean, 96% within 2 standard deviations, and 99.7% within 3 standard deviations. This is known as the empirical rule.
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+predicted probabilities
+</td>
+<td style="text-align:left;">
+The value of a predicted probability is equal to the cumulative density function, <span class="math inline">\(F(X^\prime\beta)\)</span>, evaluated at a chosen value of the independent variable
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+probability
+</td>
+<td style="text-align:left;">
+Refers to how many times out of a total number of cases a particular event occurs. We can also see it as the chance of a particular event occurring
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+probability distribution
+</td>
+<td style="text-align:left;">
+Specifies the likelihood of all possible outcomes for a particular variable
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+<strong>Substantive</strong>
+</td>
+<td style="text-align:left;">
+</td>
+</tr>
+<tr>
+<td style="text-align:left;min-width: 1.25in; ">
+test
+</td>
+<td style="text-align:left;">
+test
 </td>
 </tr>
 </tbody>
